work on combine next

--- a/views/state.ejs
+++ b/views/state.ejs
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>State Search</title>
 </head>
 <body>
     <% for(let i = 0; i < data.length; i++) { %>
         <% if(data[i].state===state){%>
-            <div style="border: 2px solid red; padding: 10px; display: flex; width: 50%; flex-wrap: wrap">
+            <div style="border: 2px solid darkorchid; padding: 10px; display: flex; width: 50%; flex-wrap: wrap">
                 <div>
                 <div><%=data[i].date %></div>
                 <div><%=data[i].city %></div>
