--- a/views/combine.ejs
+++ b/views/combine.ejs
@@ -7,21 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Test</h1>
-    <!-- <% for(let i = 0; i < data.length; i++) { %>
-   <% if(data[i].shape===shape && data[i].state===state) {%>
-        <div style="border: 2px solid magenta; padding: 10px; display: flex; width: 50%; flex-wrap: wrap">
-            <div>
-            <div><%=data[i].date %></div>
-            <div><%=data[i].city %></div>
-            <div><%=data[i].state %></div>
-            <div><%=data[i].shape %></div>
-            <div><%=data[i].duration %></div>
-            <div><%=data[i].description %></div>
-        </div>
-        </div>
-    <%}%>
-
-    <% } %> -->
+    <h1>Combine</h1>
 </body>
 </html>
