--- a/views/shapeQuery.ejs
+++ b/views/shapeQuery.ejs
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Shape Query</title>
 </head>
 <body>
+    <h1>Shape Query</h1>
     <% for(let i = 0; i < data.length; i++) { %>
    <% if(data[i].shape===shape) {%>
-        <div style="border: 2px solid blue; padding: 10px; display: flex; width: 50%; flex-wrap: wrap">
+        <div style="border: 2px solid blue; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightblue">
             <div>
             <div><%=data[i].date %></div>
             <div><%=data[i].city %></div>
