--- a/views/state.ejs
+++ b/views/state.ejs
@@ -7,9 +7,10 @@
     <title>State Search</title>
 </head>
 <body>
+    <h1>State Params</h1>
     <% for(let i = 0; i < data.length; i++) { %>
         <% if(data[i].state===state){%>
-            <div style="border: 2px solid darkorchid; padding: 10px; display: flex; width: 50%; flex-wrap: wrap">
+            <div style="border: 2px solid darkorchid; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightpink">
                 <div>
                 <div><%=data[i].date %></div>
                 <div><%=data[i].city %></div>
