--- a/views/combine.ejs
+++ b/views/combine.ejs
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Double Query</title>
 </head>
 <body>
     <h1>Combine</h1>
+    <% for(let i = 0; i < data.length; i++) { %>
+        <% if(data[i].state===state && data[i].shape===shape){%>
+            <div style="border: 2px solid orange; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: purple; color: white">
+                <div>
+                <div><%=data[i].date %></div>
+                <div><%=data[i].city %></div>
+                <div><%=data[i].state %></div>
+                <div><%=data[i].shape %></div>
+                <div><%=data[i].duration %></div>
+                <div><%=data[i].description %></div>
+            </div>
+            </div>
+        <%}%>
+   <% }%>
 </body>
 </html>
