--- a/views/stateQuery.ejs
+++ b/views/stateQuery.ejs
@@ -10,7 +10,7 @@
     <h1>State Query</h1>
     <% for(let i = 0; i < data.length; i++) { %>
         <% if(data[i].state===state){%>
-            <div style="border: 2px solid red; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: rgb(238, 185, 185)">
+            <div style="border: 2px solid red; padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: rgb(238, 185, 185); margin: 10px;font-size:20px">
                 <div>
                 <div><%=data[i].date %></div>
                 <div><%=data[i].city %></div>
