--- a/views/combine.ejs
+++ b/views/combine.ejs
@@ -10,7 +10,7 @@
     <h1>Combine</h1>
     <% for(let i = 0; i < data.length; i++) { %>
         <% if(data[i].state===state && data[i].shape===shape){%>
-            <div style="border: 2px solid orange; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: purple; color: white">
+            <div style="border: 2px solid orange; padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: purple; color: white; margin: 10px">
                 <div>
                 <div><%=data[i].date %></div>
                 <div><%=data[i].city %></div>
