--- a/views/search.ejs
+++ b/views/search.ejs
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>State Search</title>
+    <title>Results</title>
 </head>
 <body>
-    <h1>State Params</h1>
+    <h1>Your search results:</h1>
+    <a style="font-size: 20px; color: blue; text-transform: uppercase; text-decoration: none"href="/sightings">Back</a>
+    <% if(data.state !== state || data.shape!==shape){%>
+        <h1>No Match</h1>
+    <%}%>
     <% for(let i = 0; i < data.length; i++) { %>
-        <% if(data[i].state===state){%>
-            <div style="border: 2px solid darkorchid; padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightpink; margin: 10px;font-size:20px">
+        <% if(data[i].state===state && data[i].shape===shape){%>
+            <div style="border: 2px solid rgb(0, 255, 242); padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: rgb(0, 128, 28); color: white; margin: 10px; font-size:20px">
                 <div>
                 <div><%=data[i].date %></div>
                 <div><%=data[i].city %></div>
@@ -20,8 +24,7 @@
                 <div><%=data[i].description %></div>
             </div>
             </div>
-        <%}%> 
-
-        <% } %>
+        <%}%>
+   <% }%>
 </body>
 </html>
