--- a/views/shape.ejs
+++ b/views/shape.ejs
@@ -10,7 +10,7 @@
     <h1>Shape Params</h1>
     <% for(let i = 0; i < data.length; i++) { %>
    <% if(data[i].shape===shape) {%>
-        <div style="border: 2px solid darkgreen; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightgreen">
+        <div style="border: 2px solid darkgreen; padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightgreen; margin: 10px;font-size:20px">
             <div>
             <div><%=data[i].date %></div>
             <div><%=data[i].city %></div>
