--- a/views/shapeQuery.ejs
+++ b/views/shapeQuery.ejs
@@ -10,7 +10,7 @@
     <h1>Shape Query</h1>
     <% for(let i = 0; i < data.length; i++) { %>
    <% if(data[i].shape===shape) {%>
-        <div style="border: 2px solid blue; padding: 10px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightblue">
+        <div style="border: 2px solid blue; padding: 15px; display: flex; width: 50%; flex-wrap: wrap; background-color: lightblue; margin: 10px; font-size:20px">
             <div>
             <div><%=data[i].date %></div>
             <div><%=data[i].city %></div>
